--- a/ZTM Vue Course Code/Section 2/section-2-1-STARTER/index.html
+++ b/ZTM Vue Course Code/Section 2/section-2-1-STARTER/index.html
@@ -7,16 +7,26 @@
 
   <body>
     <div id="app" v-cloak>
-      <p>{{ fullName() }}</p>
+      <p>{{ fullName }}</p>
       <p><a :href="url" target="_blank">Google</a></p>
+      <p v-html="raw_url"></p>
+      <p>{{ typeof age }}</p>
       <hr />
 
       <label>First Name</label>
-      <input type="text" v-model="firstName" />
+      <input type="text" v-model.lazy.trim="firstName" />
+
+      <label>Middle Name</label>
+      <input type="text" @keyup.enter="updateMiddleName" />
 
       <label>Last Name</label>
-      <input type="text" v-model="lastName" />
+      <input type="text" :value="lastName" @input.prevent="updateLastName('Last Name Event Triggered', $event)"/>
 
+      <label>Age</label>
+      <input type="number" v-model.number="age" />
+
+      <button type="button" @click="increment">Increment</button>
+      <button type="button" @click="age--">Decrement</button>
 
     </div>
 
