--- a/ZTM Vue Course Code/Section 2/section-2-18-STARTER/index.html
+++ b/ZTM Vue Course Code/Section 2/section-2-18-STARTER/index.html
@@ -9,15 +9,28 @@
 <body>
   <div id="app">
     <label>
-      <input type="checkbox" /> Purple
+      <input type="checkbox" v-model="isPurple"/> Purple
     </label>
 
-    <div class="circle">
+    <select v-model="selectedColour">
+      <option value="">White</option>
+      <option value="text-black">Black</option>
+      <option value="text-orange">Orange</option>
+    </select>
+
+    <label>Size</label>
+    <input type="number" v-model="size" />
+
+    <div class="circle" :class="[selectedColour, circle_classes]"
+      :style="[
+      { width: size +'px', height: size +'px', lineHeight: size + 'px' }, 
+      { transform: 'rotate(30deg)' }
+      ]">
       Hi!
     </div>
   </div>
 
-  <script src="https://unpkg.com/vue@next"></script>
+  <script src="https://unpkg.com/vue@3"></script>
   <script src="app.js"></script>
 </body>
 
