--- a/ZTM Vue Course Code/Section 4/section-4-1-STARTER/index.html
+++ b/ZTM Vue Course Code/Section 4/section-4-1-STARTER/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE>
 <html>
 
 <head>
@@ -8,10 +8,12 @@
 
 <body>
   <div id="app">
-    <p>Hey</p>
+    <hello></hello>
+    <hello></hello>
+    <hello></hello>
   </div>
 
-  <script src="https://unpkg.com/vue@next"></script>
+  <script src="https://unpkg.com/vue@3"></script>
   <script src="app.js"></script>
 </body>
 
